DataSet20000/Train/Bug/783982.txt
compile failure at irefox/gfx/layers/basic/BasicImages.cpp
User Agent: Mozilla/5.0 (X11; Linux i686; rv:17.0) Gecko/17.0 Firefox/17.0
Build ID: 20120818125147

Steps to reproduce:

firefox fails to compile (last successful build attempt) was on the 18th


Actual results:

clang++ -o BasicImages.o -c -I../../dist/stl_wrappers -I../../dist/system_wrappers -include /home/hussam/packages/firefox/config/gcc_hidden.h -DIMPL_THEBES -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES  -DSTATIC_EXPORTABLE_JS_API -DEXCLUDE_SKIA_DEPENDENCIES  -DOS_LINUX=1 -DOS_POSIX=1  -I/home/hussam/packages/firefox/ipc/chromium/src -I/home/hussam/packages/firefox/ipc/glue -I../../ipc/ipdl/_ipdlheaders  -I/home/hussam/packages/firefox/content/events/src  -I/home/hussam/packages/firefox/gfx/layers -I. -I../../dist/include  -I/usr/include/nspr -I/usr/include/nss      -fPIC -Qunused-arguments  -Qunused-arguments -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wno-ctor-dtor-privacy -Wno-overlength-strings -Wno-invalid-offsetof -Wno-variadic-macros -Wno-c++0x-extensions -Wno-extended-offsetof -Wno-unknown-warning-option -Wno-return-type-c-linkage -Wno-mismatched-tags -Wno-long-long -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fshort-wchar -pthread -pipe -DNDEBUG -DTRIMMED -g -Os -freorder-blocks  -fomit-frame-pointer -I/usr/include/cairo -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng15   -I/usr/include/cairo -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng15   -I/usr/include/pixman-1   -pthread -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng15 -I/usr/include/gtk-unix-print-2.0    -Qunused-arguments  -DMOZILLA_CLIENT -include ../../mozilla-config.h -MMD -MF .deps/BasicImages.o.pp /home/hussam/packages/firefox/gfx/layers/basic/BasicImages.cpp
/home/hussam/packages/firefox/gfx/layers/basic/BasicImages.cpp:70:24: error: expected a class or namespace
    if (aFormats[0] == ImageFormat::PLANAR_YCBCR) {
                       ^
1 error generated.
make[6]: *** [BasicImages.o] Error 1
make[6]: Leaving directory `/home/hussam/packages/firefox/obj-i686-pc-linux-gnu/gfx/layers'
make[5]: *** [libs] Error 2
make[5]: Leaving directory `/home/hussam/packages/firefox/obj-i686-pc-linux-gnu/gfx'
make[4]: *** [libs_tier_platform] Error 2
make[4]: Leaving directory `/home/hussam/packages/firefox/obj-i686-pc-linux-gnu'
make[3]: *** [tier_platform] Error 2
make[3]: Leaving directory `/home/hussam/packages/firefox/obj-i686-pc-linux-gnu'
make[2]: *** [default] Error 2
make[2]: Leaving directory `/home/hussam/packages/firefox/obj-i686-pc-linux-gnu'
make[1]: *** [realbuild] Error 2
make[1]: Leaving directory `/home/hussam/packages/firefox'
make: *** [build] Error 2